# rekall

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  rekall-projects.json.example  setup.ps1  setup.sh
.github/workflows/: test.yml
commands/: instincts-review.md  session-log.md  vault-consolidate.md  vault-health.md
docs/: how-it-works.md
hooks/: compile-memory.sh  dangerous-cmd-check.sh  file-size-check.sh  post-write.sh  secrets-check.sh  session-logger.py  vault-lint.sh  vault-researcher.sh
memory/: MEMORY.md
src/rekall/: __init__.py  backup.py  compiler.py  config.py  embedder.py  extractor.py  migrate.py  schemas.py  server.py  setup_hooks.py  storage.py  sync.py
tests/: test_backup.py  test_compiler.py  test_config.py  test_contradictions.py  test_decay.py  test_embedder.py  test_extractor.py  test_integration.py  test_migrate.py  test_search.py  test_server.py  test_storage.py  test_sync.py
vault/: AGENDA.md  Home.md
